# psdr-cuda

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
CMake/: FindOpenEXR.cmake  FindOptiX.cmake
cuda/: psdr_cuda.cu  psdr_cuda.h
cuda/host/: NEE.cuh  util.cuh
cuda/kernel/: NEE.cu  util.cu
docs/: conf.py  core_compile.rst  core_intro.rst  index.rst  inverse_diff_render.rst  inverse_intro.rst  plugin_refs.rst  python_intro.rst  python_render.rst
examples/: config.py  example.xml  psdr_test.py  run_test.py
examples/data/: parched_256.exr
examples/data/envmaps/: ballroom_1k.exr
examples/data/scenes/: bunny.xml  bunny_env.xml  bunny_env_2.xml  cbox_bunny.xml  cbox_bunny_mutiemitter.xml  tree.xml
examples/data/textures/: test_texture.exr
examples/utils/: adam.py  differential.py  scene_data.py
ext/: README.md
include/misc/: Exception.h
include/psdr/: constants.h  fwd.h  macros.h  object.h  psdr.h  types.h  utils.h
include/psdr/bsdf/: bsdf.h  diffuse.h  ggx.h  normalmap.h  roughconductor.h
include/psdr/core/: AQ_distrb.h  bitmap.h  bitmap_loader.h  cube_distrb.h  frame.h  intersection.h  miniz.h  pmf.h  ray.h  records.h  sampler.h  tinyexr.h  transform.h  warp.h
include/psdr/edge/: edge.h
include/psdr/emitter/: area.h  emitter.h  envmap.h
include/psdr/integrator/: direct.h  directlighting.h  field.h  integrator.h
include/psdr/optix/: ptx.h
include/psdr/scene/: optix.h  scene.h  scene_loader.h  scene_optix.h
include/psdr/sensor/: perspective.h  sensor.h
include/psdr/shape/: mesh.h
include/pugixml/: pugiconfig.hpp
src/: psdr.cpp
src/bsdf/: diffuse.cpp  ggx.cpp  normalmap.cpp  roughconductor.cpp
src/core/: AQ_distrb.cpp  bitmap.cpp  bitmap_loader.cpp  cube_distrb.cpp  miniz.cpp  pmf.cpp  sampler.cpp
src/emitter/: area.cpp  envmap.cpp
src/integrator/: direct.cpp  directlighting.cpp  field.cpp  integrator.cpp
src/optix/: ptx.cpp
src/scene/: scene.cpp  scene_loader.cpp  scene_optix.cpp
src/sensor/: perspective.cpp  sensor.cpp
src/shape/: mesh.cpp
